@@ -405,3 +405,6 @@ Change list for PernMangband
 
 11/12/2001 (evileye)
 - Anti spamming code added
+
+11/12/2001 (Jir)
+- Vertical recall supported.
